--- a/sections/gls-trusted-brands.liquid
+++ b/sections/gls-trusted-brands.liquid
@@ -68,7 +68,10 @@
         { "value": "h2", "label": "H2" },
         { "value": "h3", "label": "H3" },
         { "value": "h4", "label": "H4" },
-        { "value": "h5", "label": "H5" }
+        { "value": "h5", "label": "H5" },
+        { "value": "h6", "label": "H6" },
+        { "value": "p", "label": "Paragraph" },
+        { "value": "span", "label": "Span" }
       ],
       "default": "h3"
     },
