--- a/sections/blog-carousel.liquid
+++ b/sections/blog-carousel.liquid
@@ -16,6 +16,37 @@
     }
   }
 
+  .blog-carousel__heading {
+    font-size: {{ section.settings.heading_size }}px;
+    color: {{ section.settings.heading_color }};
+  }
+
+  .blog-carousel__tagline {
+    font-size: {{ section.settings.tagline_size }}px;
+    color: {{ section.settings.tagline_color }};
+  }
+
+  .blog-carousel-card__title {
+    margin: 0 0 1rem;
+    font-size: {{ section.settings.card_title_size }}px;
+    line-height: 1.3;
+    font-weight: 600;
+    color: {{ section.settings.card_title_color }};
+  }
+  
+  .blog-carousel-card__title a {
+    text-decoration: none;
+    color: currentColor;
+  }
+
+  .blog-carousel-card__excerpt {
+    font-size: {{ section.settings.card_excerpt_size }}px;
+    line-height: 1.6;
+    color: {{ section.settings.card_excerpt_color }};
+    margin-bottom: 2rem;
+    flex-grow: 1;
+  }
+
   .blog-carousel-card {
     height: 100%;
     display: flex;
@@ -60,25 +91,7 @@
     flex-grow: 1;
   }
 
-  .blog-carousel-card__title {
-    margin: 0 0 1rem;
-    font-size: 1.8rem;
-    line-height: 1.3;
-    font-weight: 600;
-  }
-  
-  .blog-carousel-card__title a {
-    text-decoration: none;
-    color: currentColor;
-  }
-
-  .blog-carousel-card__excerpt {
-    font-size: 1.4rem;
-    line-height: 1.6;
-    color: rgba(var(--color-foreground), 0.75);
-    margin-bottom: 2rem;
-    flex-grow: 1;
-  }
+  /* Typography styles moved to top */
 
   .blog-carousel-card__footer {
     margin-top: auto;
@@ -121,10 +134,10 @@
     {%- if section.settings.heading != blank or section.settings.tagline != blank -%}
       <div class="blog-carousel__header">
         {%- if section.settings.heading != blank -%}
-          <h2 class="title {{ section.settings.heading_size }}">{{ section.settings.heading }}</h2>
+          <{{ section.settings.heading_tag }} class="blog-carousel__heading">{{ section.settings.heading }}</{{ section.settings.heading_tag }}>
         {%- endif -%}
         {%- if section.settings.tagline != blank -%}
-          <span class="blog-carousel__tagline">{{ section.settings.tagline }}</span>
+          <{{ section.settings.tagline_tag }} class="blog-carousel__tagline">{{ section.settings.tagline }}</{{ section.settings.tagline_tag }}>
         {%- endif -%}
       </div>
     {%- endif -%}
@@ -158,9 +171,9 @@
                 {%- endif -%}
                 
                 <div class="blog-carousel-card__content">
-                  <h3 class="blog-carousel-card__title">
+                  <{{ section.settings.card_title_tag }} class="blog-carousel-card__title">
                     <a href="{{ article.url }}">{{ article.title | truncate: 50 }}</a>
-                  </h3>
+                  </{{ section.settings.card_title_tag }}>
                   
                   <div class="blog-carousel-card__excerpt">
                     {%- if article.excerpt.size > 0 -%}
@@ -264,20 +277,123 @@
     },
     {
       "type": "select",
-      "id": "heading_size",
+      "id": "heading_tag",
+      "label": "Heading Tag",
       "options": [
-        { "value": "h2", "label": "Small" },
-        { "value": "h1", "label": "Medium" },
-        { "value": "h0", "label": "Large" }
+        { "value": "h1", "label": "H1" },
+        { "value": "h2", "label": "H2" },
+        { "value": "h3", "label": "H3" },
+        { "value": "h4", "label": "H4" },
+        { "value": "h5", "label": "H5" },
+        { "value": "h6", "label": "H6" },
+        { "value": "p", "label": "Paragraph" },
+        { "value": "span", "label": "Span" }
       ],
-      "default": "h1",
-      "label": "Heading Size"
+      "default": "h2"
+    },
+    {
+      "type": "range",
+      "id": "heading_size",
+      "min": 20,
+      "max": 60,
+      "step": 1,
+      "unit": "px",
+      "label": "Heading Size",
+      "default": 36
+    },
+    {
+      "type": "color",
+      "id": "heading_color",
+      "label": "Heading Color",
+      "default": "#000000"
     },
     {
       "type": "text",
       "id": "tagline",
       "label": "Tagline",
       "default": "Stay updated with our latest articles"
+    },
+    {
+      "type": "select",
+      "id": "tagline_tag",
+      "label": "Tagline Tag",
+      "options": [
+        { "value": "h1", "label": "H1" },
+        { "value": "h2", "label": "H2" },
+        { "value": "h3", "label": "H3" },
+        { "value": "h4", "label": "H4" },
+        { "value": "h5", "label": "H5" },
+        { "value": "h6", "label": "H6" },
+        { "value": "p", "label": "Paragraph" },
+        { "value": "span", "label": "Span" }
+      ],
+      "default": "p"
+    },
+    {
+      "type": "range",
+      "id": "tagline_size",
+      "min": 12,
+      "max": 24,
+      "step": 1,
+      "unit": "px",
+      "label": "Tagline Size",
+      "default": 16
+    },
+    {
+      "type": "color",
+      "id": "tagline_color",
+      "label": "Tagline Color",
+      "default": "#666666"
+    },
+    {
+      "type": "header",
+      "content": "Article Card Typography"
+    },
+    {
+      "type": "select",
+      "id": "card_title_tag",
+      "label": "Card Title Tag",
+      "options": [
+        { "value": "h3", "label": "H3" },
+        { "value": "h4", "label": "H4" },
+        { "value": "h5", "label": "H5" },
+        { "value": "h6", "label": "H6" },
+        { "value": "p", "label": "Paragraph" },
+        { "value": "span", "label": "Span" }
+      ],
+      "default": "h3"
+    },
+    {
+      "type": "range",
+      "id": "card_title_size",
+      "min": 14,
+      "max": 30,
+      "step": 1,
+      "unit": "px",
+      "label": "Card Title Size",
+      "default": 20
+    },
+    {
+      "type": "color",
+      "id": "card_title_color",
+      "label": "Card Title Color",
+      "default": "#000000"
+    },
+    {
+      "type": "range",
+      "id": "card_excerpt_size",
+      "min": 12,
+      "max": 20,
+      "step": 1,
+      "unit": "px",
+      "label": "Card Excerpt Size",
+      "default": 14
+    },
+    {
+      "type": "color",
+      "id": "card_excerpt_color",
+      "label": "Card Excerpt Color",
+      "default": "#666666"
     },
     {
       "type": "header",
