--- a/sections/gls-about.liquid
+++ b/sections/gls-about.liquid
@@ -12,6 +12,15 @@
       padding-bottom: {{ section.settings.padding_bottom }}px;
     }
   }
+  #shopify-section-{{ section.id }} .gls-about__heading {
+    color: {{ section.settings.heading_color }};
+    font-size: clamp({{ section.settings.heading_size | times: 0.6 }}px, 4vw, {{ section.settings.heading_size }}px);
+  }
+
+  #shopify-section-{{ section.id }} .gls-about__text p {
+    color: {{ section.settings.text_color }};
+    font-size: {{ section.settings.text_size }}px;
+  }
 {%- endstyle -%}
 
 <section class="gls-about section-{{ section.id }}-padding">
@@ -37,7 +46,7 @@
 
       <div class="gls-about__content-column">
         {%- if section.settings.heading != blank -%}
-          <h2 class="gls-about__heading">{{ section.settings.heading }}</h2>
+          <{{ section.settings.heading_tag }} class="gls-about__heading">{{ section.settings.heading }}</{{ section.settings.heading_tag }}>
         {%- endif -%}
         
         <div class="gls-about__divider"></div>
@@ -82,6 +91,58 @@
       "id": "heading",
       "label": "Heading",
       "default": "About Green Leaf Supplies"
+    },
+    {
+      "type": "select",
+      "id": "heading_tag",
+      "label": "Heading Tag",
+      "options": [
+        { "value": "h1", "label": "H1" },
+        { "value": "h2", "label": "H2" },
+        { "value": "h3", "label": "H3" },
+        { "value": "h4", "label": "H4" },
+        { "value": "h5", "label": "H5" },
+        { "value": "h6", "label": "H6" },
+        { "value": "p", "label": "Paragraph" },
+        { "value": "span", "label": "Span" }
+      ],
+      "default": "h2"
+    },
+    {
+      "type": "range",
+      "id": "heading_size",
+      "min": 20,
+      "max": 80,
+      "step": 2,
+      "unit": "px",
+      "label": "Heading Size (Desktop)",
+      "default": 48
+    },
+    {
+      "type": "color",
+      "id": "heading_color",
+      "label": "Heading Color",
+      "default": "#060316"
+    },
+    {
+      "type": "header",
+      "content": "Text Settings"
+    },
+    {
+      "type": "range",
+      "id": "text_size",
+      "min": 12,
+      "max": 24,
+      "step": 1,
+      "unit": "px",
+      "label": "Text Size",
+      "default": 16
+    },
+    {
+      "type": "color",
+      "id": "text_color",
+      "label": "Text Color",
+      "default": "#555555"
     },
     {
       "type": "text",
