--- a/sections/gls-featured-products.liquid
+++ b/sections/gls-featured-products.liquid
@@ -25,9 +25,10 @@
           </{{ heading_tag }}>
         {%- endif -%}
         {%- if section.settings.subheading != blank -%}
-          <p class="gls-featured-products__subheading" style="font-size: {{ section.settings.subheading_size }}px; color: {{ section.settings.subheading_color }};">
+          {%- assign subheading_tag = section.settings.subheading_tag | default: 'p' -%}
+          <{{ subheading_tag }} class="gls-featured-products__subheading" style="font-size: {{ section.settings.subheading_size }}px; color: {{ section.settings.subheading_color }};">
             {{ section.settings.subheading }}
-          </p>
+          </{{ subheading_tag }}>
         {%- endif -%}
       </div>
     </div>
@@ -78,7 +79,9 @@
         { "value": "h3", "label": "H3" },
         { "value": "h4", "label": "H4" },
         { "value": "h5", "label": "H5" },
-        { "value": "h6", "label": "H6" }
+        { "value": "h6", "label": "H6" },
+        { "value": "p", "label": "Paragraph" },
+        { "value": "span", "label": "Span" }
       ],
       "default": "h2"
     },
@@ -97,6 +100,22 @@
       "id": "heading_color",
       "label": "Heading Color",
       "default": "#000000"
+    },
+    {
+      "type": "select",
+      "id": "subheading_tag",
+      "label": "Subheading Tag",
+      "options": [
+        { "value": "h1", "label": "H1" },
+        { "value": "h2", "label": "H2" },
+        { "value": "h3", "label": "H3" },
+        { "value": "h4", "label": "H4" },
+        { "value": "h5", "label": "H5" },
+        { "value": "h6", "label": "H6" },
+        { "value": "p", "label": "Paragraph" },
+        { "value": "span", "label": "Span" }
+      ],
+      "default": "p"
     },
     {
       "type": "range",
